--- a/.github/workflows/tutore.yaml
+++ b/.github/workflows/tutore.yaml
@@ -4,6 +4,8 @@ name: Test & deployement
 on:
   push:
     branches: [ main ]
+  pull-request:
+    branches: [main]
 
 jobs:
   build:
@@ -11,13 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 12
+    - name: Use Node.js 18
       uses: actions/setup-node@v2
       with:
-        node-version: 12.x
+        node-version: 18.x
     - run: npm i
-    - run: npm run build --if-present
+    - name: Run build with code coverage
+      uses: coactions/setup-xvfb@v1
+      with:
+        run: npm run test -- --no-watch --code-coverage
     - run: npm test
+    
 
 # name: Node.js CD
 
