--- a/.github/workflows/tutore.yaml
+++ b/.github/workflows/tutore.yaml
@@ -15,7 +15,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 18.x
-    - run: npm i
+
+    - name: Installer les dependances Node.js
+      run: npm install
+
     - name: Run build with code coverage
       uses: coactions/setup-xvfb@v1
       with:
