--- a/.github/workflows/tutore.yaml
+++ b/.github/workflows/tutore.yaml
@@ -6,24 +6,24 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 18
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup Node
       uses: actions/setup-node@v2
       with:
         node-version: 18.x
 
-    # - name: Installer les dependances Node.js
-      # run: npm install
+    - name: Installer les dependances Node.js
+      run: npm install
 
-    - name: Run build with code coverage
+    - name: Run tests with code coverage
       uses: coactions/setup-xvfb@v1
       with:
         run: npm run test -- --no-watch --code-coverage
-    - run: npm test
     
 
 # name: Node.js CD
