--- a/.github/workflows/tutore.yaml
+++ b/.github/workflows/tutore.yaml
@@ -12,18 +12,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup Node
-      uses: actions/setup-node@v2
+    - name: Setup JDK
+      uses: actions/setup-java@v2
       with:
-        node-version: 18.x
+         java-version: '17'
+         distribution:'adopt'
 
-    - name: Installer les dependances Node.js
-      run: npm install
+    - name: Construire le projet
+      run: ./mvnw clean install 
 
-    - name: Run tests with code coverage
-      uses: coactions/setup-xvfb@v1
-      with:
-        run: npm run test -- --no-watch --code-coverage
+    - name: Executer les tests
+      run: ./mvnw test  # Exécute les tests unitaires
+
+    
     
 
 # name: Node.js CD
