--- a/.github/workflows/tutore.yaml
+++ b/.github/workflows/tutore.yaml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
          java-version: '17'
+         distribution: 'adopt'
 
     - name: Construire le projet
       run: ./mvnw clean install 
